--- a/project/app.json
+++ b/project/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "bolt-expo-nativewind",
-    "slug": "bolt-expo-nativewind",
+    "name": "StudyGeniusAI",
+    "slug": "StudyGeniusAI",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "StudyGeniusAI",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
@@ -16,9 +16,24 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "APPWRITE_ENDPOINT": "https://cloud.appwrite.io/v1",
+      "PROJECT_ID": "7ebd9d30008916bc91f",
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "e3f6c5a3-a57c-4414-b1cb-9cb6d5401c21"
+      }
+    },
+    "android": {
+      "package": "com.mohamedelashmony05.StudyGeniusAI"
     }
   }
 }
