user adding courses done

--- a/studygenius/package.json
+++ b/studygenius/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@azure/core-auth": "^1.9.0",
+    "@azure/cosmos": "^4.3.0",
+    "@azure/openai": "^2.0.0",
+    "@azure/storage-blob": "^12.27.0",
     "appwrite": "^17.0.1",
     "chart.js": "^4.4.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.6",
     "next": "15.3.0",
     "next-themes": "^0.2.1",
+    "openai": "^4.95.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
