--- a/studygenius/package.json
+++ b/studygenius/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "@azure/core-auth": "^1.9.0",
     "@azure/cosmos": "^4.3.0",
+    "@azure/identity": "^4.9.1",
     "@azure/openai": "^2.0.0",
     "@azure/storage-blob": "^12.27.0",
     "appwrite": "^17.0.1",
     "chart.js": "^4.4.1",
     "clsx": "^2.1.0",
+    "dotenv": "^16.5.0",
     "framer-motion": "^11.0.6",
     "next": "15.3.0",
     "next-themes": "^0.2.1",
-    "openai": "^4.95.0",
+    "openai": "^4.96.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
