--- a/studygenius/package.json
+++ b/studygenius/package.json
@@ -17,12 +17,12 @@
     "chart.js": "^4.4.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.6",
-    "next": "15.3.0",
+    "next": "^15.3.1",
     "next-themes": "^0.2.1",
     "openai": "^4.95.0",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.0.1",
     "sonner": "^1.7.4",
     "zustand": "^4.5.1"
